frontend/src/style.css
@font-face {
  font-family: 'japanese-brush';
  src: url("./font/JAPAB___.TTF"); }

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit; }

html {
  font-size: 62.5%; }

body {
  box-sizing: border-box;
  overflow: hidden;
  padding: 0 3rem; }

@media screen and (max-width: 1000px) {
  body {
    padding: 0 1rem; } }

@keyframes logo-spin {
  from {
    transform: rotate(0deg); }
  to {
    transform: rotate(-360deg); } }

@keyframes brush {
  from {
    transform: scaleX(0.1) translateX(-2.5rem); }
  to {
    transform: scaleX(5rem) translateX(0); } }

body {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  /* font-size: 16px; */
  line-height: 1.7;
  color: #777; }

.app-body {
  height: 85vh;
  width: 100%;
  box-shadow: 0 0.4rem 0.8rem 0 rgba(0, 0, 0, 0.2), 0 0.6rem 1rem 0 rgba(0, 0, 0, 0.1);
  background-image: linear-gradient(to right bottom, #3b8686, #0b486b);
  padding: 2rem; }

.navbar {
  position: absolute;
  padding: 2rem 7rem 0 5rem;
  width: 100%; }
  .navbar__box {
    font-family: 'japanese-brush';
    padding-bottom: 2rem;
    color: #f7f7f7;
    font-size: 2rem;
    min-height: 80px;
    font-weight: normal;
    height: 12vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    box-sizing: border-box;
    border-bottom: 2px solid rgba(247, 247, 247, 0.2); }

.flex-container:first-child {
  cursor: pointer; }

.zen-circle {
  height: 8rem;
  width: 8rem;
  margin-right: 1rem;
  background-image: url("./images/circle-g.png");
  background-size: cover;
  animation: logo-spin infinite 20s linear;
  animation-play-state: paused; }

.flex-container {
  padding-top: 1rem;
  display: flex;
  align-items: center;
  z-index: 3; }

.spinning:hover .zen-circle {
  animation-play-state: running; }

.link {
  box-sizing: border-box;
  position: relative;
  margin-right: 3.5rem;
  font-weight: normal; }
  .link:hover {
    cursor: pointer;
    opacity: 0.8; }

.current {
  width: 5rem;
  height: 2rem;
  background-image: url("./images/brush-stroke-g.png");
  background-size: cover;
  position: absolute;
  left: 50%;
  margin-left: -3rem;
  margin-top: -0.7rem;
  z-index: 10;
  animation: brush 0.2s ease-in; }

.menu-btn {
  display: none;
  position: absolute;
  z-index: 3;
  right: 23px;
  top: 18px;
  cursor: pointer;
  transition: all 0.4s ease-out; }

.menu-btn .btn-line {
  width: 50px;
  height: 12px;
  margin: 0 0 5px 0;
  background-image: url("./images/brush-stroke-w.png");
  background-size: cover;
  transition: all 0.4s ease-out; }

.menu-btn.close {
  transform: rotate(180deg); }

.menu-btn.close .btn-line:nth-child(1) {
  transform: rotate(45deg) translate(16px, 15px);
  width: 50px; }

.menu-btn.close .btn-line:nth-child(2) {
  opacity: 0; }

.menu-btn.close .btn-line:nth-child(3) {
  transform: rotate(-45deg) translate(7px, -6px);
  width: 50px; }

.mobile-modal {
  display: none;
  position: absolute;
  justify-content: flex-start;
  padding-top: 30rem;
  align-items: center;
  flex-direction: column;
  font-family: 'japanese-brush';
  font-size: 2rem;
  top: -1rem;
  left: -2.4rem;
  transform: translateX(100%);
  height: 135vh;
  width: 100vw;
  z-index: 2;
  background-image: linear-gradient(to right bottom, #3b8686, #0b486b);
  transition: all ease-in 0.3s; }

.show {
  transform: translateX(0); }

.link-modal {
  box-sizing: border-box;
  margin-bottom: 1rem;
  color: #f7f7f7;
  font-weight: normal; }
  .link-modal:hover {
    cursor: pointer;
    opacity: 0.8; }

.test {
  position: relative;
  height: 50px;
  width: 250px; }

.title {
  font-weight: normal;
  z-index: 10;
  position: absolute;
  height: 50px;
  width: 250px;
  top: 0;
  left: 0; }

@media screen and (max-width: 1000px) {
  .navbar {
    padding: 0;
    margin: 1rem 1rem 0 1.4rem; }
    .navbar__box {
      width: 94%;
      padding-bottom: 0; }
  .flex-container {
    padding-top: 0; }
  .mobile-modal {
    display: flex; }
  .menu-btn {
    display: inline-block; }
  .link {
    display: none; }
  .zen-circle {
    margin-top: -1.5rem;
    height: 5rem;
    width: 5rem; }
  .title {
    font-size: 2.5rem; }
  .paint-bg {
    height: 50px;
    width: 200px; } }

.header {
  position: relative;
  height: 45vh;
  width: 100%;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.85) 20%, rgba(11, 72, 107, 0.75) 55%, rgba(0, 0, 0, 0.85) 88%), url("./images/temple.jpg");
  background-size: cover;
  background-position: center;
  z-index: 3; }
  .header__text-box {
    width: 100%;
    position: absolute;
    top: 62%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    font-family: 'lato';
    color: #fff; }
  .header__title, .header__title-secondary {
    display: block;
    text-transform: capitalize;
    font-weight: 400; }
  .header__title {
    letter-spacing: 6px;
    font-size: 4.5rem; }
    .header__title-secondary {
      margin-top: -5px;
      letter-spacing: 3.5px;
      font-size: 1.7rem;
      opacity: 0.8; }

@media screen and (max-width: 1000px) {
  .header__title {
    font-size: 3.7rem;
    letter-spacing: 3px; }
    .header__title-secondary {
      font-size: 1.4rem;
      letter-spacing: 2px; } }

